--- a/style.css
+++ b/style.css
@@ -9,4 +9,9 @@ img  {
     margin-left: auto;
     margin-right: auto;
 }
-/*
+
+button {
+    background-color: grey;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border-radius: 10px;
+}
