--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ button {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 10px;
 }
+
+button:hover {
+    background-color:aquamarine;
+    transition: 0.8s;
+}
