--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: purple;
+    background: rgb(118, 136, 80);
 }
 
 img  {
@@ -11,12 +11,12 @@ img  {
 }
 
 button {
-    background-color: grey;
+    background-color: plum;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 10px;
 }
 
 button:hover {
-    background-color:aquamarine;
-    transition: 0.8s;
+    background-color:purple;
+    transition: 0.6s;
 }
