--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
 body {
-    background: rgb(118, 136, 80);
+    background: grey;
 }
 
 img  {
-    height: 400px;
-    width: 400px;
+    height: 450px;
+    width: 450px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 50%;
+
 }
 
 button {
     background-color: plum;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
 }
 
 button:hover {
-    background-color:purple;
-    transition: 0.6s;
+    background-color:rgb(162, 86, 162);
+    transition: 0.7s;
 }
