--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
 }
 
 img  {
-    height: 450px;
-    width: 450px;
+    /* height: 450px;
+    width: 450px; */
+    width:30%;
     display: block;
     margin-left: auto;
     margin-right: auto;
