--- a/style.css
+++ b/style.css
@@ -3,14 +3,12 @@ body {
 }
 
 img  {
-    /* height: 450px;
-    width: 450px; */
     width:30%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 50%;
-
+    border-radius: 10px;
+    box-shadow: 10px 10px 8px #1f1717;
 }
 
 button {
@@ -19,6 +17,7 @@ button {
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
+    box-shadow: 10px 10px 8px #1f1717;
 }
 
 button:hover {
