--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img  {
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    box-shadow: 10px 10px 8px #1f1717;
+    box-shadow: 5px 10px 10px 6px black, 0px 0px 40px 10px plum;
 }
 
 button {
@@ -17,7 +17,7 @@ button {
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
-    box-shadow: 10px 10px 8px #1f1717;
+    box-shadow: 0px 0px 8px #1f1717;
 }
 
 button:hover {
@@ -30,8 +30,9 @@ h1 {
     padding:20px;
 }
 
-.name {
+.name, .blank {
    background-color: darkolivegreen;
    border-radius: 10px;
+   outline-style: solid;
 
 }
