--- a/style.css
+++ b/style.css
@@ -30,9 +30,60 @@ h1 {
     padding:20px;
 }
 
+/* .social {
+
+} */
+
 .name, .blank {
    background-color: darkolivegreen;
    border-radius: 10px;
    outline-style: solid;
-
 }
+
+/* Style all font awesome icons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+
+  }
+
+  .fa:hover {
+    opacity: 0.7;
+  }
+
+
+  /* Facebook */
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  /* Twitter */
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-github {
+    background: black;
+    color:white
+    ;
+  }
+
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+
+  /* .fa-gmail {
+    background: #dd4b39;
+    color: white;
+  } */
